  information will be very useful because it will list
  all the strings which were updated or added. If you
  encounter a modified string, please look in the 
  reference (english) file to see if you existing
  translation is still valid and update if appropriate.

  [U] = updated, [+] = added, [-] = removed

  ====================================================

  06-11-2002 - settings
    [+] strWarningTrackVars

  06-11-2002 - default
    [u] strZoneAppend
    [+] strZoneAppendType
    [+] strZoneAppendHTMLCode
    [+] strZoneAppendZoneSelection
    [+] strZoneAppendSelectZone

  29-10-2002 - settings
    [u] strUseAcl
    [+] strDeliverySettings
    [+] strCacheType
    [+] strCacheFiles
    [+] strCacheDatabase
    [+] strCacheShmop
    [u] strUseConditionalKeys
    [u] strUseMultipleKeys

  27-10-2002 - maintenance
    [-] strZoneCache
    [-] strRebuildZoneCache
    [-] strZoneCacheExplaination
    [+] strCache
    [+] strRebuildDeliveryCache
    [+] strDeliveryCacheExplaination
    [+] strDeliveryCacheSharedMem
    [+] strDeliveryCacheDatabase

  23-10-2002 - maintenance
    [+] strNotAbleToCheck
    [+] strForUpdatesLookOnWebsite
    [+] strClickToVisitWebsite

  23-10-2002 - invocation
    [+] strSmoothMovement
    [+] strHideNotMoving
    [+] strHideDelay
    [+] strHideTransparancy

  23-10-2002 - default
    [u] strSearch
    [u] strExpandAll
    [u] strCollapseAll
    [+] strPrevious_Key
    [+] strNext_Key
    [+] strAddClient_Key
    [+] strAddCampaign_Key
    [+] strAddBanner_Key
    [+] strACLAdd_Key
    [+] strAddNewAffiliate_Key
    [+] strAddNewZone_Key
    [+] keyHome
    [+] keyUp
    [+] keyNextItem
    [+] keyPreviousItem
    [+] keyList
    [+] keySearch
    [+] keyCollapseAll
    [+] keyExpandAll
    [+] keyAddNew
    [+] keyNext
    [+] keyPrevious

  18-10-2002 - default
    [u[ time_format (IMPORTANT!)
    [+] strRecentHosts

  16-10-2002 - settings
    [+] strGeotargeting
    [+] strGeoLogStats
    [+] strGeoStoreCookie