@@ -311,30 +311,35 @@ $GLOBALS['strTrackAdClicks']			= "Track AdClicks";
 
 // Display limitations
 $GLOBALS['strModifyBannerAcl'] 			= "Delivery options";
-$GLOBALS['strACL'] 				= "Delivery";
-$GLOBALS['strACLAdd'] 				= "Add new limitation";
+$GLOBALS['strACL'] 						= "Delivery";
+$GLOBALS['strACLAdd'] 					= "Add new limitation";
 $GLOBALS['strACLAdd_Key'] 				= "Add <u>n</u>ew limitation";
 $GLOBALS['strNoLimitations']			= "No limitations";
 $GLOBALS['strApplyLimitationsTo']		= "Apply limitations to";
 $GLOBALS['strRemoveAllLimitations']		= "Remove all limitations";
-$GLOBALS['strEqualTo']				= "is equal to";
+$GLOBALS['strEqualTo']					= "is equal to";
 $GLOBALS['strDifferentFrom']			= "is different from";
-$GLOBALS['strAND']				= "AND";  						// logical operator
-$GLOBALS['strOR']				= "OR"; 						// logical operator
+$GLOBALS['strLaterThan']				= "is later than";
+$GLOBALS['strLaterThanOrEqual']			= "is later than or equal to";
+$GLOBALS['strEarlierThan']				= "is earlier than";
+$GLOBALS['strEarlierThanOrEqual']		= "is earlier than or equal to";
+$GLOBALS['strDifferentFrom']			= "is different from";
+$GLOBALS['strAND']						= "AND";  						// logical operator
+$GLOBALS['strOR']						= "OR"; 						// logical operator
 $GLOBALS['strOnlyDisplayWhen']			= "Only display this banner when:";
-$GLOBALS['strWeekDay'] 				= "Weekday";
-$GLOBALS['strTime'] 				= "Time";
-$GLOBALS['strUserAgent'] 			= "Useragent";
-$GLOBALS['strDomain'] 				= "Domain";
-$GLOBALS['strClientIP'] 			= "Client IP";
-$GLOBALS['strSource'] 				= "Source";
-$GLOBALS['strBrowser'] 				= "Browser";
-$GLOBALS['strOS'] 				= "OS";
-$GLOBALS['strCountry'] 				= "Country";
-$GLOBALS['strContinent'] 			= "Continent";
+$GLOBALS['strWeekDay'] 					= "Weekday";
+$GLOBALS['strTime'] 					= "Time";
+$GLOBALS['strUserAgent'] 				= "Useragent";
+$GLOBALS['strDomain'] 					= "Domain";
+$GLOBALS['strClientIP'] 				= "Client IP";
+$GLOBALS['strSource'] 					= "Source";
+$GLOBALS['strBrowser'] 					= "Browser";
+$GLOBALS['strOS'] 						= "OS";
+$GLOBALS['strCountry'] 					= "Country";
+$GLOBALS['strContinent'] 				= "Continent";
 $GLOBALS['strDeliveryLimitations']		= "Delivery limitations";
 $GLOBALS['strDeliveryCapping']			= "Delivery capping";
-$GLOBALS['strTimeCapping']			= "Once this banner has been delivered once, don't show this banner again to the same user for:";
+$GLOBALS['strTimeCapping']				= "Once this banner has been delivered once, don't show this banner again to the same user for:";
 $GLOBALS['strImpressionCapping']		= "Do not show this banner to the same user more than:";
 
 
